# clockworkEMscaledcouplinghypothesis

./: .gitignore  LICENSE  Makefile  README.md  config_full_run.yaml  pyproject.toml
.github/workflows/: ci.yml
scripts/: summarize_outputs.py
src/rank1/: __init__.py  cli.py  config.py  doctor.py  logging.py  provenance.py
src/rank1/analysis/: __init__.py  base.py  diffractive_rank_test.py  elastic_rank_test.py  higgs_rank_test.py  np_analysis.py  replication.py  residual_mode.py  sweeps.py
src/rank1/data_sources/: __init__.py  arxiv.py  cernopendata.py  hepdata.py
src/rank1/datasets/: __init__.py  base.py  diffractive_dis.py  elastic_totem.py  higgs_atlas_mu.py
src/rank1/datasets/manual_tables/: 1503_08111_dsigma_dt_8tev.yaml  1812_08283_dsigma_dt_13tev.yaml  totem_7tev_dsigma.yaml
src/rank1/models/: __init__.py  bootstrap.py  fit.py  lowrank.py
src/rank1/reporting/: __init__.py  figures.py  np_figures.py  np_report.py  report_md.py  tables.py
src/rank1/scripts/: __init__.py  reproduce_all.py  verify_repro.py
src/rank1/utils/: __init__.py  cache.py  hashing.py  http.py  parallel.py  stats.py
src/rank1/validation/: __init__.py  calibration.py  identity.py
tests/: conftest.py  test_bootstrap.py  test_doctor_smoke.py  test_end_to_end_smoke.py  test_hepdata_client.py  test_lowrank_synthetic.py  test_np_analysis.py  test_pdf_extract.py
